--- a/global-styles.css
+++ b/global-styles.css
@@ -69,6 +69,9 @@ THE CSS BELOW IS FOR THE NAVBAR RESPONSIVENESS
     footer a {
       font-size: 0.95rem;
     }
+      nav a {
+    font-size: 0.7rem;
+  }
 
 }
 
